@@ -39,7 +39,7 @@ dpkg (1.8.0) unstable; urgency=low
   * Update Galish translation
   * Add new --import option to dpkg-statoverride to make it easy to
     import suidmanager settings.
-  * Speedups patches by Adam Heath
+  * Speedup patches by Adam Heath
   * statoverride fixes by Robert Luberda, Closes: Bug#78436
   * Add Linux S/390 support. Closes: Bug#79063
   * Using libz to decompress data instead of calling gzip.
@@ -51,6 +51,7 @@ dpkg (1.8.0) unstable; urgency=low
   * Apply statoverrides to more then just files
   * Update update-alternatives manpage to use FHS instead of FSSTND.
     Closes: Bug#80237
+  * List descriptions for udebs in .changes
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
