@@ -1,3 +1,7 @@
+Sun Dec 24 17:05:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/dpkg-genchanges.pl: output descriptions for udebs as well
+
 Sun Dec 24 06:31:55 CST 2000 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-name.sh: Add -k|--symlink option.
